--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,9 +1,11 @@
 .friendList {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   list-style: none;
   padding: 0;
   gap: 10px;
+  margin: 0 auto;
 }
 
 .friendListItem {
